fix GP-2: Improve the diff to better handle the case of whitespace changes

--- a/server.web/src/main/java/com/gitplex/server/web/component/diff/blob/text/text-diff.css
+++ b/server.web/src/main/java/com/gitplex/server/web/component/diff/blob/text/text-diff.css
@@ -81,7 +81,8 @@
 	background: #ffecec;
 }
 .text-diff>.body>tbody>tr>td.old .delete {
-	background-color: #F8C8C8;
+	background-color: #F8B8B8;
+	text-decoration: line-through;
 }
 .text-diff>.body>tbody>tr>td.new.number {
 	background: #dbffdb;
